<resources>
    <string name="app_name">DashCam</string>
    <string name="project_title">Dashboard Camera</string>
    <string name="title_activity_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="settings_use_sdcard">Save external/sd card</string>

    <string name="settings_use_location">Use Location</string>
    <string name="settings_stop_on_shock">Stop On Shock</string>
    <string name="settings_small">Small (0.5G)</string>
    <string name="settings_big">Big (4.0G)</string>
    <string name="settings_shock_title">Set level to stop camera at (g-force):</string>

    <string name="settings_max_allowed_space_title">Max allowed space on SD card:</string>
    <string name="settings_min_space">200Mb</string>
    <string name="settings_max_space">10Gb</string>

    <string name="settings_save_interval_title">Save recording every:</string>
    <string name="settings_min_interval">30s</string>
    <string name="settings_max_interval">180s</string>

    <string name="settings_validation_sdcardsize">Not enough space on the SD card. Select a lower value or make space on the card. Space Available: </string>
    <string name="title_activity_video_recording">VideoRecording</string>

    <string name="video_recording_start">Start</string>
    <string name="video_recording_stop">Stop</string>
    <string name="title_activity_cam_recording">CamRecording</string>
</resources>
