<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mcd.hkyj.dashcam.Settings"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_title"
                    android:textSize="@dimen/activity_vertical_title_size"
                    android:text="@string/action_settings"
                    android:layout_column="1"/>
            </TableRow>

            <!-- STOPPING POINT -->
            <TableRow
                android:layout_marginTop="40dp">

                <TextView
                    android:layout_column="1"
                    android:text="@string/settings_stop_on_shock">
                </TextView>

                <Switch
                    android:id="@+id/settings_switch_shock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="175dp"/>
            </TableRow>


            <!-- STOPPING POINT SEEKBAR -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:id="@+id/settings_shock_details_table"
                >

                <TableRow
                    android:id="@+id/settings_seekbar_title"
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:text="@string/settings_shock_title"
                        android:layout_column="0"
                        />

                </TableRow>

                <TableRow
                    android:id="@+id/setting_seekbar_smallbig"
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/settings_small"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:gravity="right"
                        android:layout_column="1"
                        android:text="@string/settings_big"/>


                </TableRow>

                <TableRow>
                    <SeekBar
                        android:id="@+id/settings_seekbar_shock"
                        android:layout_span="2"
                        android:minWidth="200dp"
                        android:max="7"
                        android:minHeight="6dip"
                        android:maxHeight="6dip"/>
                </TableRow>
            </TableLayout>


            <!-- MAX SPACE ON SD CARD -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:id="@+id/settings_max_space_table"
                >

                <TableRow
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:text="@string/settings_max_allowed_space_title"
                        android:layout_column="0"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/settings_min_space"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:gravity="right"
                        android:layout_column="1"
                        android:text="@string/settings_max_space"/>


                </TableRow>

                <TableRow>
                    <SeekBar
                        android:id="@+id/settings_seekbar_max_space"
                        android:layout_span="2"
                        android:minWidth="200dp"
                        android:max="50"
                        android:minHeight="6dip"
                        android:maxHeight="6dip"/>
                </TableRow>
            </TableLayout>



            <!-- SAVE INTERVAL -->
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1"
                android:id="@+id/settings_save_interval_table"
                >

                <TableRow
                    android:layout_marginTop="20dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="fill_parent"
                        android:text="@string/settings_save_interval_title"
                        android:layout_column="0"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:text="@string/settings_min_interval"
                        android:layout_column="0"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:gravity="right"
                        android:layout_column="1"
                        android:text="@string/settings_max_interval"/>


                </TableRow>

                <TableRow>
                    <SeekBar
                        android:id="@+id/settings_seekbar_save_interval"
                        android:layout_span="2"
                        android:minWidth="200dp"
                        android:max="36"
                        android:minHeight="6dip"
                        android:maxHeight="6dip"/>
                </TableRow>
            </TableLayout>

        </TableLayout>

    </RelativeLayout>

</ScrollView>
